# cv_render

./: .gitignore  CMakeLists.txt  README.md  VideoRenderConfig.h.in  main.cpp  old.txt  test_a.sdp
scripts/: client_2.sh  server_2.sh
